<resources>
    <string name="app_name">Datos de Contacto</string>

    <string name="hint_nombre">Nombre Completo</string>
    <string name="hint_fecha_nac">Fecha de Nacimiento</string>
    <string name="hint_telefono">Telefono</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_descripcion">Descripción del Contacto</string>

    <string name="btn_siguiente">SIGUIENTE</string>
    <string name="btn_editar">EDITAR DATOS</string>
    <string name="tv_capturar_datos">::Capturar Datos::</string>
    <string name="tv_confirmar_datos">::Confirmar Datos::</string>
</resources>