<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvCapturarDatos"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/tv_capturar_datos"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="@dimen/texto_titulo"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/areaNombre">
    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/areaNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvCapturarDatos"
        app:layout_constraintBottom_toTopOf="@+id/areaNacimiento">

        <EditText
            android:id="@+id/edtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nombre"
            android:autofillHints="@string/hint_nombre"
            android:inputType="textPersonName"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/areaNacimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/areaTelefono"
        app:layout_constraintTop_toBottomOf="@+id/areaNombre">

        <TextView
            android:id="@+id/tvNacimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_fecha_nac" />

        <DatePicker
            android:id="@+id/datNacimiento"
            style="@style/MaterialAlertDialog.MaterialComponents.Picker.Date.Spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"></DatePicker>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/areaTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/areaNacimiento"
        app:layout_constraintBottom_toTopOf="@+id/areaEmail">

        <EditText
            android:id="@+id/edtTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_telefono"
            android:autofillHints="@string/hint_telefono"
            android:inputType="phone"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/areaEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/areaTelefono"
        app:layout_constraintBottom_toTopOf="@+id/areaDescripcion">

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:autofillHints="@string/hint_email"
            android:inputType="textEmailAddress"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/areaDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/areaEmail"
        app:layout_constraintBottom_toTopOf="@+id/btnSiguiente">

        <EditText
            android:id="@+id/edtDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_descripcion"
            android:autofillHints="@string/hint_descripcion"
            android:inputType="textMultiLine"
            android:singleLine="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/btn_siguiente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/areaDescripcion" />

</androidx.constraintlayout.widget.ConstraintLayout>